<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="326dp"
        android:layout_height="231dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo_descritption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mainmenu" />

    <Button
        android:id="@+id/btn_startgame"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/start_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <Button
        android:id="@+id/btn_close_app"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/closeApp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_commands" />

    <Button
        android:id="@+id/btn_gamerules"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/gamerules"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_startgame"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_commands"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/command"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gamerules"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>