<resources>
    <string name="app_name">Cluedo</string>
    <string name="start_game">Start Game</string>
    <string name="help_button">Help</string>
    <string name="closeApp">Close App</string>
    <string name="logo_descritption">The logo of the game.</string>
    <string name="gamerules">Gamerules</string>
    <string name="command">Commands</string>
    <!-- Für die Erklärung des MainScreens -->
    <string name="game_explanation">At the beginning the player has to press the <b>"Start Game"-Button</b>. Then you have to follow the following steps:\n
        \n\t1) The first player (Host) has to create a Lobby with the <b>"Create Lobby"-Button</b>.
        \n\t2) The Host shares the GameID via the <b>Send Link-Button</b>.
        \n\t3) The other players then have to join via the "Join Lobby" Button
        \n\t4) There they have to enter the GameID.
        \n\t5) As soon as somebody enters the Lobby a Character will be assign for every Player.
        \n\t6) The Host can start the Game, when three to six player are in the lobby.
        \n\t7) Now the game begins to find the murderer.

    </string>
    <string name="commands_explanation">Here you can find all explanations for the tools you need to play the game.\n
        \n<b>The Dice:</b>
        \nAt the beginning of every round a window will pop up asking you to roll the dice. To accomplish that you have two options:\n
        \n\t1) Click the dice.
        \n\t2) Shake your phone.
        \n\nNow you are able to move your character through the 9 rooms to find clues. The max. number of the steps per roll is 3 or you roll
        the magnifying glass which will give the information which player a certain card has.
        \n\n<b>Move:</b>
        \nAfter the dice throw you can use the yellow arrows to move your character.
        \n\n<b>The Swiping Motions:</b>
        \nTo make it easier to overview everything you can use three swiping motions to see your cards, notepad and accusation.\n
        \n<b>Swipe Right:</b> There you can see your notepad. Swipe left to get back to the board.
        \n<b>Swipe Left:</b> To make your suspicion and accusation. Swipe right to get back to the board.
        \n<b>Swipe Up:</b> Open your three to six cards.
        \n<b>Swipe Down:</b> On an rare occasion you can frame someone win and end the game.
        \n\n<b>Notepad:</b>
        \nIn the Notepad you can use Checkboxes to remember your clues for the murderer and accusation.
        \n\n<b>Suspicion/Accusation:</b>
        \nAfter the left swipe you are in the accusation menu. Here you can select the weapon, the culprit and the room which is automatically your current room.
        Then you can press the <b>Suspicion</b> or the <b>Accusation</b> Button. If you make an successfully accusation you win the game otherwise you will lose and
        cannot continue the game.
    </string>


    <!-- Für die Lobby -->
    <string name="create_lobby">Create Lobby</string>
    <string name="lobby">Lobby</string>
    <string name="join_via">Join via:</string>
    <string name="start">Start</string>
    <string name="send_link">Send Link</string>
    <string name="waiting">Waiting...</string>
    <string name="game_id">Game ID:</string>
    <string name="enter_id">Enter ID</string>
    <string name="join">Join</string>

    <string name="join_lobby">Join Lobby</string>
    <string name="lobby_title">Do you want to create a Lobby <br />or do you want to join one?</string>
    <string name="back">Back</string>
    <string name="Selection_suspicious">Selection suspicious</string>
    <string name="Selection_weapon">Selection weapon</string>
    <string name="choose_the_character_you_want_to_play_with">Choose the character you want to play with</string>
    <string name="back_to_map">Back to map</string>
    <string name="frame">Frame</string>
    <string name="notepad">Notepad</string>

    <string-array name="person_array">
        <item>Professor Plum</item>
        <item>Reverend Green</item>
        <item>Miss Scarlett</item>
        <item>Mrs Peacock</item>
        <item>Colonel Mustard</item>
        <item>Dr Orchid</item>
    </string-array>

    <string-array name="weapons_array">
        <item>Dagger</item>
        <item>Revolver</item>
        <item>Rope</item>
        <item>Pipe</item>
        <item>Candlestick</item>
        <item>Wrench</item>
    </string-array>


    <string-array name="rooms_array">
        <item>Lounge</item>
        <item>Conservatory</item>
        <item>Ballroom</item>
        <item>Dining Room</item>
        <item>Kitchen</item>
        <item>Library</item>
        <item>Billiard Room</item>
        <item>Study</item>
        <item>Hall</item>
    </string-array>

    <string-array name="all">
        <item>Miss Scarlett</item>
        <item>Professor Plum</item>
        <item>Reverend Green</item>
        <item>Mrs Peacock</item>
        <item>Colonel Mustard</item>
        <item>Dr. Orchid</item>
        <item>Dagger</item>
        <item>Candlestick</item>
        <item>Revolver</item>
        <item>Rope</item>
        <item>Pipe</item>
        <item>Wrench</item>
        <item>Lounge</item>
        <item>Conservatory</item>
        <item>Ball Room</item>
        <item>Dining Room</item>
        <item>Kitchen</item>
        <item>Library</item>
        <item>Billiard Room</item>
        <item>Study</item>
        <item>Hall</item>
        <item>Hall</item>
    </string-array>

</resources>